# corrector

./: .gitignore  Cargo.toml  Ctmparticle1.html  Ctmparticle2.html  Ctmparticle3.html  LICENSE  LICENSE-APACHE  README.md
data/: THIRD-PARTY-LICENSES.md  names.txt
data/ca/: names.txt
data/es/: custom.txt
scripts/: build_es_dictionary.py
src/: config.rs  corrector.rs  lib.rs  main.rs  units.rs
src/dictionary/: loader.rs  mod.rs  names.rs  trie.rs
src/grammar/: analyzer.rs  mod.rs  rules.rs  tokenizer.rs
src/languages/: mod.rs
src/languages/catalan/: mod.rs
src/languages/spanish/: capitalization.rs  common_gender.rs  compound.rs  dequeismo.rs  diacritics.rs  exceptions.rs  fossilized_prepositions.rs  gerund_posteriority.rs  homophone.rs  imperative_infinitive.rs  impersonal.rs  irrealis_conditional.rs  mod.rs  names_gender.rs  pipeline.rs  pleonasm.rs  plurals.rs  pronoun.rs  punctuation.rs  relative.rs  rules.rs  subject_verb.rs  vocative.rs
src/languages/spanish/conjugation/: enclitics.rs  irregular.rs  mod.rs  prefixes.rs  recognizer.rs  regular.rs  stem_changing.rs
src/languages/spanish/data/: ambiguous_gender_lemmas.txt  variable_collective_nouns.txt
src/spelling/: levenshtein.rs  mod.rs
tests/: catalan.rs  spanish_corrector.rs  spanish_round68.rs
